# vscode-portable-installer

./: main.py  pyproject.toml
